# ot-harjoitustyo

./: .pylintrc  README.md  pyproject.toml  tasks.py
doukumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: blackjackgui.py  card.py  deck.py  deck_test.py  handchecker.py  index.py  rules.py
src/entities/: card.py  deck.py  handchecker.py
src/gui/: blackjackgui.py
src/tests/: card_test.py  deck_test.py  handchecker_test.py
